<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.purple.iptv.player.views.PageHeaderView
            android:id="@+id/header_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/recording_fragment_lr_margin"
            android:layout_marginTop="@dimen/recording_fragment_tb_margin"
            android:layout_marginEnd="@dimen/recording_fragment_lr_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_downloadspeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/roboto_regular_400"
                    android:layout_marginBottom="0dp"
                    android:maxLines="2"
                    android:text=" "
                    android:textColor="@color/white"
                    android:textSize="@dimen/recording_fragment_recording_path_text_size"
                    android:textStyle="normal"
                    android:visibility="visible" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_recording_path"
                    android:layout_width="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/btn_change_directory"
                    android:layout_centerVertical="true"
                    android:layout_height="wrap_content"

                    android:gravity="start|center_vertical"
                    android:fontFamily="@font/roboto_regular_400"
                    android:maxLines="2"
                    android:scrollHorizontally="true"
                    android:freezesText="true"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:text="@string/recording_path"
                    android:textColor="@color/white"
                    android:textSize="@dimen/recording_fragment_recording_path_text_size"
                    android:textStyle="normal"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/btn_change_directory"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_regular_400"
                    android:focusable="true"
                    android:visibility="visible"
                    android:gravity="center"
                    android:paddingStart="@dimen/recording_fragment_btn_changepath_lr_padding"
                    android:paddingEnd="@dimen/recording_fragment_btn_changepath_lr_padding"
                    android:text="@string/recording_change_directory"
                    android:textColor="@color/white" /> android:background="@drawable/bg_btn"
            </RelativeLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <FrameLayout
                        android:id="@+id/frame_recording"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="0dp"
                        android:focusable="true"
                        android:paddingLeft="@dimen/recording_schedule_lr_padding"
                        android:paddingTop="@dimen/recording_schedule_tb_padding"
                        android:paddingRight="@dimen/recording_schedule_lr_padding"
                        android:paddingBottom="@dimen/recording_schedule_tb_padding"
                        android:visibility="gone">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/llcover"

                            android:duplicateParentState="true"
                            android:gravity="center_vertical"
                            android:orientation="vertical"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp">
<!--                            android:background="@drawable/bg_category"-->
                            <TextView
                                android:id="@+id/text_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:duplicateParentState="true"
                                android:ellipsize="end"
                                android:fontFamily="@font/roboto_regular_400"
                                android:maxLines="1"
                                android:paddingLeft="@dimen/recording_schedule_lr_padding"
                                android:paddingRight="@dimen/recording_schedule_lr_padding"
                                android:text=""
                                android:textColor="@color/white"
                                android:textSize="@dimen/recording_schedule_name_text_size"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:paddingStart="@dimen/recording_schedule_lr_padding"
                                android:paddingEnd="@dimen/recording_schedule_lr_padding"
                                android:visibility="visible"
                                android:weightSum="1">

                                <TextView
                                    android:id="@+id/text_size"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_weight="0"
                                    android:duplicateParentState="true"
                                    android:ellipsize="end"
                                    android:fontFamily="@font/roboto_regular_400"
                                    android:gravity="center_vertical"
                                    android:maxLines="1"
                                    android:text=""
                                    android:textColor="@color/white_opacity_seventy"
                                    android:textSize="@dimen/recording_schedule_time_text_size"
                                    android:visibility="gone"
                                    tools:ignore="RtlSymmetry" />

                                <TextView
                                    android:id="@+id/text_time"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_weight="1"
                                    android:duplicateParentState="true"
                                    android:ellipsize="end"
                                    android:fontFamily="@font/roboto_regular_400"
                                    android:gravity="center_vertical"
                                    android:maxLines="1"

                                    android:paddingRight="@dimen/recording_schedule_lr_padding"
                                    android:text=""
                                    android:textColor="@color/white_opacity_seventy"
                                    android:textSize="@dimen/recording_schedule_time_text_size" />

                            </LinearLayout>

                            <TextView
                                android:id="@+id/text_status"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:duplicateParentState="true"
                                android:ellipsize="end"
                                android:fontFamily="@font/roboto_medium_500"
                                android:maxLines="1"
                                android:paddingLeft="@dimen/recording_schedule_lr_padding"
                                android:paddingRight="@dimen/recording_schedule_lr_padding"
                                android:text=""
                                android:textColor="@color/selected_color"
                                android:textSize="@dimen/recording_schedule_time_text_size"
                                android:textStyle="bold" />


                        </LinearLayout>

                    </FrameLayout>
                    <FrameLayout
                        android:id="@+id/frame_recording2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="0dp"
                        android:focusable="true"
                        android:paddingLeft="@dimen/recording_schedule_lr_padding"
                        android:paddingTop="@dimen/recording_schedule_tb_padding"
                        android:paddingRight="@dimen/recording_schedule_lr_padding"
                        android:paddingBottom="@dimen/recording_schedule_tb_padding"
                        android:visibility="gone">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/llcover2"

                            android:duplicateParentState="true"
                            android:gravity="center_vertical"
                            android:orientation="vertical"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp">
                            <!--                            android:background="@drawable/bg_category"-->
                            <TextView
                                android:id="@+id/text_name2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:duplicateParentState="true"
                                android:ellipsize="end"
                                android:fontFamily="@font/roboto_regular_400"
                                android:maxLines="1"
                                android:paddingLeft="@dimen/recording_schedule_lr_padding"
                                android:paddingRight="@dimen/recording_schedule_lr_padding"
                                android:text=""
                                android:textColor="@color/white"
                                android:textSize="@dimen/recording_schedule_name_text_size"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:paddingStart="@dimen/recording_schedule_lr_padding"
                                android:paddingEnd="@dimen/recording_schedule_lr_padding"
                                android:visibility="visible"
                                android:weightSum="1">

                                <TextView
                                    android:id="@+id/text_size2"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_weight="0"
                                    android:duplicateParentState="true"
                                    android:ellipsize="end"
                                    android:fontFamily="@font/roboto_regular_400"
                                    android:gravity="center_vertical"
                                    android:maxLines="1"
                                    android:text=""
                                    android:textColor="@color/white_opacity_seventy"
                                    android:textSize="@dimen/recording_schedule_time_text_size"
                                    android:visibility="gone"
                                    tools:ignore="RtlSymmetry" />

                                <TextView
                                    android:id="@+id/text_time2"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_weight="1"
                                    android:duplicateParentState="true"
                                    android:ellipsize="end"
                                    android:fontFamily="@font/roboto_regular_400"
                                    android:gravity="center_vertical"
                                    android:maxLines="1"

                                    android:paddingRight="@dimen/recording_schedule_lr_padding"
                                    android:text=""
                                    android:textColor="@color/white_opacity_seventy"
                                    android:textSize="@dimen/recording_schedule_time_text_size" />

                            </LinearLayout>

                            <TextView
                                android:id="@+id/text_status2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:duplicateParentState="true"
                                android:ellipsize="end"
                                android:fontFamily="@font/roboto_medium_500"
                                android:maxLines="1"
                                android:paddingLeft="@dimen/recording_schedule_lr_padding"
                                android:paddingRight="@dimen/recording_schedule_lr_padding"
                                android:text=""
                                android:textColor="@color/selected_color"
                                android:textSize="@dimen/recording_schedule_time_text_size"
                                android:textStyle="bold" />


                        </LinearLayout>

                    </FrameLayout>


                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:focusable="false">
                <!--                        android:descendantFocusability="afterDescendants"-->

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true" />

                <TextView
                    android:id="@+id/text_no_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/str_error_no_data_found"
                    android:textColor="@color/white"
                    android:textSize="@dimen/recording_no_data_text_size"
                    android:textStyle="normal"
                    android:visibility="gone" />

            </FrameLayout>

        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/common_progressbar_size"
        android:layout_height="@dimen/common_progressbar_size"
        android:layout_gravity="center"
        android:focusable="true"
        android:visibility="gone" />

</FrameLayout>